# AI-Regulatory-Contract-Sumarizer

./: .env.debug.example  .env.openai.example  .gitignore  README.md  app.py  basic_server.py  minimal_api.py  pyproject.toml  requirements.txt  test_payload.json  test_simple.json
api/: main.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
summarizer/: chunking.py  llm.py  pdf_loader.py  pipeline.py
tests/: test_api_health.py  test_chunking.py  test_llm_prompts.py  test_pdf_loader.py
